<resources>
    <string name="app_name" translatable="false">BoardGameFinder</string>
    <string name="HomeNavName">Feed</string>
    <string name="SearchNavName">Search</string>
    <string name="CreateNavName">Add</string>
    <string name="EventsNavName">Events</string>
    <string name="ProfileNavName">Profile</string>
    <string name="icon" translatable="false">icon</string>
    <string name="Welcome">Welcome</string>
    <string name="Back">Back</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confirm password</string>
    <string name="ForgotPassword">Forgot password?</string>
    <string name="LogIn">Log in</string>
    <string name="SignUp">Sign up</string>
    <string name="or">or</string>
    <string name="Create">Create</string>
    <string name="Account">Account</string>
    <string name="board_game_finder" translatable="false">Board Game Finder</string>
    <string name="find_a_party_for_your_board_game_event">Find a party for your board game event</string>
    <string name="explore">Explore</string>
    <string name="password_recovery">PASSWORD RECOVERY</string>
    <string name="back_icon">back</string>
    <string name="enter_email">Enter your email address and we will send you a new password</string>
    <string name="enter_email_here">enter email address here</string>
    <string name="send">Send</string>
    <string name="confirm">Confirm</string>
    <string name="verification">VERIFICATION</string>
    <string name="sent_you_code">We have sent you an access code via email for email address verification</string>
    <string name="enter_code_here">enter code here</string>
    <string name="next_time_in">next time in 10 seconds</string>
    <string name="resend_code">Resend code</string>
    <string name="profile_picture">profile picture</string>
    <string name="games_in_collection">Collection</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="events">Events</string>
    <string name="follow">Follow</string>
    <string name="more_icon" translatable="false">more icon</string>
    <string name="like_icon" translatable="false">like icon</string>
    <string name="join">Join</string>
    <string name="requested">Requested</string>
    <string name="leave">Leave</string>
    <string name="events_feed">Events feed</string>
    <string name="my_events">My events</string>
    <string name="user_already_exists">Such user already exists</string>
    <string name="wrong_email_password">Wrong email or password</string>
    <string name="create_event">Create event</string>
    <string name="event_title">Event title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>