<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.views.WelcomeActivity"
    android:background="?colorPrimary">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/icon"
        android:src="@drawable/welcome_img"
        app:layout_constraintBottom_toTopOf="@+id/guideline_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_image"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/board_game_finder"
            android:textColor="?colorOnPrimary"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="@+id/guideline_icon_bottom"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_gravity="center"
                android:layout_weight="20"
                android:background="@drawable/rounded_layout_bg"
                android:backgroundTint="?colorOnPrimary"/>

            <ImageView
                android:layout_weight="10"
                android:paddingHorizontal="3dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_margin="5dp"
                android:src="@drawable/ic_dice"
                app:tint="?colorOnPrimary"
                android:contentDescription="@string/icon" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_gravity="center"
                android:layout_weight="70"
                android:background="@drawable/rounded_layout_bg"
                android:backgroundTint="?colorOnPrimary"/>

        </LinearLayout>

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_a_party_for_your_board_game_event"
            android:textColor="?colorOnPrimary"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="@+id/guideline_icon_bottom"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signupButton"
        style="@style/Widget.BoardGameFinder.Button.OutlinedButtonOnPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/explore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        android:layout_marginBottom="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>